[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/UI/track_select_screen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Music/the_cockpit_song.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Materials/title-bg.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Fonts/Bangers-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/AudioPlayer.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[node name="TrackSelectScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreenMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
script = ExtResource( 5 )

[node name="TrackSelectText" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Track Select"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.45
anchor_top = 0.75
anchor_right = 0.55
anchor_bottom = 0.85
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_right = 102.0
margin_bottom = 80.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track1Button" type="Button" parent="Menu/Buttons"]
margin_right = 102.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Canyon"

[node name="Track2Button" type="Button" parent="Menu/Buttons"]
margin_top = 28.0
margin_right = 102.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "Tundra"

[node name="Track3Button" type="Button" parent="Menu/Buttons"]
margin_top = 56.0
margin_right = 102.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 4 )
text = "Canyon (Night)"

[connection signal="pressed" from="Menu/Buttons/Track1Button" to="." method="_on_Track1Button_pressed"]
[connection signal="pressed" from="Menu/Buttons/Track2Button" to="." method="_on_Track2Button_pressed"]
[connection signal="pressed" from="Menu/Buttons/Track3Button" to="." method="_on_Track3Button_pressed"]
